<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/srt_num_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/flight_people_text"
        android:textColor="@color/itin_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/srt_itin_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/itin_num_text"
        android:textColor="@color/itin_color"
        android:paddingLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/srt_from_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/srt_itin_num"
        android:text="@string/from_to_text"
        android:textColor="@color/header_color"
        android:paddingLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/srt_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/srt_num_person"
        android:text="@string/total_price_text"
        android:textColor="@color/price_color"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>