<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flightapp.androidproject.DisplayResultActivity" >
    
    <FrameLayout 
        android:id="@+id/bar_layout" 
        android:layout_alignParentTop="true"
        android:layout_height="@dimen/top_bar_length" 
        android:layout_width="match_parent"
        android:background="@color/header_color" >
        
        <Button
            android:layout_marginTop="@dimen/menu_button_vert_margin"
            android:layout_marginLeft="@dimen/menu_button_horiz_margin"
            android:layout_width="@dimen/drop_menu_icon"
            android:layout_height="@dimen/drop_menu_icon"
            android:layout_gravity="left"
            android:onClick="openCloseDrawer"
            android:background="@drawable/menu_selector" />
        
        <TextView
            android:id="@+id/bar_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/top_text_padding"
            android:text="@string/book_header_text"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </FrameLayout>
    
    <LinearLayout 
        android:id="@+id/header_layout" 
        android:layout_below="@+id/bar_layout"
        android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/subheader_height"
            android:background="@color/subheader_color"
            android:text="@string/view_itin_text"
            android:textColor="@color/header_color"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/subheader_padding"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/info_from_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:paddingTop="@dimen/top_text_padding"
        android:text="@string/from_to_text"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/price_color"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/info_depart_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_from_to"
        android:text="@string/departing_text"
        android:textColor="@color/itin_color"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="12sp" />

    <ListView
        android:id="@+id/summary_result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_depart_date"
        android:layout_above="@+id/footer_item_layout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        
    </ListView>
    
    <RelativeLayout
        android:id="@+id/footer_item_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/header_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin" >
        
        <TextView
            android:id="@+id/total_itin_cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/total_num_person"
            android:text="@string/itinerary_cost_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
        
        <TextView
            android:id="@+id/total_itin_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/total_itin_cost_text"
            android:layout_above="@+id/total_num_person"
            android:text="@string/single_price_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
        
        <TextView
            android:id="@+id/total_num_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/total_entire_cost_text"
            android:text="@string/booking_numpeople_text"
            android:textSize="12sp"
            android:textColor="@color/white" />
        
        <TextView
            android:id="@+id/total_entire_cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/total_cost_text"
            android:layout_marginBottom="6dp" />
        
        <TextView
            android:id="@+id/total_entire_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/total_entire_cost_text"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            android:textColor="@color/green"
            android:text="@string/total_price_text"
            android:layout_marginBottom="6dp" />
        
    </RelativeLayout>
    
    <Button
        android:id="@+id/book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/summary_result_list"
        android:layout_marginLeft="20dp"
        android:background="@drawable/book_button_selector"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:onClick="onClickBookItin"
        android:text="@string/book_text"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>
