<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:orientation="vertical"
    tools:context="com.GroupFlightApp.flightsapp.AdminOptions">
    
    <FrameLayout 
        android:id="@+id/bar_layout" 
        android:layout_alignParentTop="true"
        android:layout_height="@dimen/top_bar_length" 
        android:layout_width="match_parent"
        android:background="@color/header_color" >
        
        
        <TextView
            android:id="@+id/bar_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/top_text_padding"
            android:text="@string/title_activity_admin_options"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </FrameLayout>
    
    <LinearLayout 
        android:id="@+id/header_layout" 
        android:layout_below="@+id/bar_layout"
        android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/subheader_height"
            android:background="@color/subheader_color"
            android:text=""
            android:textColor="@color/header_color"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/subheader_padding"/>
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/admin_scroll"
        android:layout_below="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin" 
        android:paddingLeft="@dimen/activity_horizontal_margin" 
        android:paddingRight="@dimen/activity_horizontal_margin" 
        android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/uploadClients"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="uploadClients"
            android:layout_marginRight="6dp"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:text="@string/upload_clients_file" />
        
        <Button
            android:id="@+id/uploadFlights"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="uploadFlights"
            android:textColor="@color/white"
            android:layout_marginLeft="6dp"
            android:background="@drawable/button_selector"
            android:text="@string/upload_flights_file" />

        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent" 
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/modifyButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="modifyClient"
                android:background="@drawable/button_selector"
                android:textColor="@color/white"
                android:layout_marginRight="6dp"
                android:text="@string/edit_client_info" />
        
        <EditText
            android:id="@+id/ClientEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/client_email_need"
            android:paddingLeft="6dp"
            android:inputType="textEmailAddress" />

        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
        
        <Button android:id="@+id/flight_modify_button" 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:layout_marginRight="6dp"
            android:onClick="modifyFlight"
            android:text="@string/update_flight_info"/>
        
        <EditText
            android:id="@+id/FlightEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:paddingLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/flight_number"
            android:inputType="textEmailAddress" />
        
        </LinearLayout>
        
        <Button 
            android:id="@+id/logoutbutton" 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textColor="@color/white"
            android:layout_marginRight="6dp"
            android:onClick="onClickLogout"
            android:text="@string/log_out_text"/>
        
        </LinearLayout>
    </ScrollView>
</RelativeLayout>